objects/TR_Retention__Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>TR_Retention__Error_Code__c</fullName>
        <label>Error Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR_Retention__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR_Retention__Error_Point__c</fullName>
        <label>Error Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Retention__Record_ID__c</fullName>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All_Recent_BS</fullName>
        <columns>NAME</columns>
        <columns>TR_Retention__Record_ID__c</columns>
        <columns>TR_Retention__Error_Point__c</columns>
        <columns>TR_Retention__Error_Message__c</columns>
        <columns>TR_Retention__Error_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/1/2019 12:00 AM</value>
        </filters>
        <label>All Recent BS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR_Retention__All</fullName>
        <columns>NAME</columns>
        <columns>TR_Retention__Record_ID__c</columns>
        <columns>TR_Retention__Error_Point__c</columns>
        <columns>TR_Retention__Error_Message__c</columns>
        <columns>TR_Retention__Error_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TR_Retention__Today</fullName>
        <columns>NAME</columns>
        <columns>TR_Retention__Record_ID__c</columns>
        <columns>TR_Retention__Error_Point__c</columns>
        <columns>TR_Retention__Error_Message__c</columns>
        <columns>TR_Retention__Error_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <displayFormat>ERRL-{00000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>